# cbsa-rust

./: .gitignore  Cargo.toml  README.md  application.toml
.github/workflows/: ci.yml
docs/: translation-rules.md
migrations/: 0001_baseline.sql  0002_proctran_counter_default.sql
src/: config.rs  db.rs  domain.rs  error.rs  lib.rs  main.rs  repository.rs  service.rs  web.rs
src/repository/: creacc.rs  crecust.rs  dbcrfun.rs  delacc.rs  delcus.rs  inqacc.rs  inqacccu.rs  inqcust.rs  updacc.rs  updcust.rs  xfrfun.rs
src/service/: crdtagy.rs  creacc.rs  crecust.rs  dbcrfun.rs  delacc.rs  delcus.rs  inqacc.rs  inqacccu.rs  inqcust.rs  updacc.rs  updcust.rs  xfrfun.rs
src/web/: crdtagy.rs  creacc.rs  crecust.rs  dbcrfun.rs  delacc.rs  delcus.rs  inqacc.rs  inqacccu.rs  inqcust.rs  updacc.rs  updcust.rs  xfrfun.rs
tests/: crdtagy.rs  creacc.rs  crecust.rs  db_retry.rs  dbcrfun.rs  delacc.rs  delcus.rs  inqacc.rs  inqacccu.rs  inqcust.rs  integration_test.rs  smoke.rs  updacc.rs  updcust.rs  xfrfun.rs
