[package]
name = "cbsa"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "CBSA migration target — CICS COBOL → Rust port"
license = "Apache-2.0"
publish = false

[lib]
path = "src/lib.rs"

[[bin]]
name = "cbsa"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
http = "1"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "rust_decimal",
    "macros",
    "migrate",
] }

rust_decimal = { version = "1", features = ["serde-with-str", "db-postgres"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
validator = { version = "0.18", features = ["derive"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
figment = { version = "0.10", features = ["toml", "env"] }
async-trait = "0.1"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["cockroach_db"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["full", "test-util"] }
